# mcp-server

./: .env.example  .gitignore  README.md  api_server.py  chat_session.py  client.py  llm_factory.py  llm_provider.py  main.py  prompts.py  pyproject.toml  server.py  tool_agent.py  tool_handler.py
client/: __init__.py  chat_session.py  client.py  console_formatter.py  llm_factory.py  llm_providers.json  mcp_adapter_prompt.py  tool_client.py  tool_handler.py
prompts/: __init__.py  code_review.py
resources/: __init__.py  greetings.py
tools/: __init__.py  browser_tools.py  file_tools.py  math_tools.py
